<resources>
    <string name="app_name">Pill Tracker</string>
    <string-array name="nav_choices">
        <item>Home</item>
        <item>Add New Medication</item>
        <item>My Medications</item>
        <item>For My Doctor</item>
        <item>Update Refills</item>
        <item>Find Pharmacies</item>
    </string-array>
    <string name="home">Home</string>
    <string name="new_med">Add New Medication</string>
    <string name="my_meds">My Medications</string>
    <string name="doctor_view">For My Doctor</string>
    <string name="contact">Contact My Provider</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="welcome_new_user">"Welcome to Pill Tracker! This is a tool for you to use to track your medication refills and usage. You can see how closely you are following the prescribed dosing and get reminders for prescriptions due for a refill.\n\nFirst, we need some information."</string>
    <string name="new_drug_search">Enter the beginning of the brand or generic name of your drug</string>
    <string name="drug_strength">Choose the drug strength</string>
    <string name="indication_hint">For what reason are you taking this medication?</string>
    <string name="sig_hint">Enter the instructions on the bottle or as you understand them</string>
    <string name="quantity_hint">Number of pills per dose (average)</string>
    <string name="frequency_hint">Number of doses per day (average)</string>
    <string name="appearance_hint">Describe the pill\'s appearance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
